Re-add dedicated commands for tricks Not sure whether this is working or not?